@@ -1,5 +1,4 @@
 usr/games
-usr/share/gnocatan
+usr/share/games/gnocatan/images
 usr/share/gnome/help/gnocatan/C
 usr/share/gnome/help/gnocatan/C/images
-usr/share/pixmaps/gnocatan
