@@ -1,2 +1,2 @@
 usr/games/gnocatanai
-usr/share/gnocatan/computer_names
+usr/share/games/gnocatan/computer_names
