@@ -1,1 +1,1 @@
-usr/share/gnocatan/*.game
+usr/share/games/gnocatan/*.game
