@@ -25,8 +25,7 @@
 
 #include "glib-driver.h"
 #include "gnocatan-server.h"
-
-#define GNOCATAN_DIR_DEFAULT	"/usr/share/gnocatan"
+#include "gnocatan-path.h"
 
 #define TERRAIN_DEFAULT	0
 #define TERRAIN_RANDOM	1
